<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="18sp"
    android:background="@color/item_background">

    <ImageView
        android:id="@+id/sessionMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/screenshot_from_map_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sessionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sessionTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionMap" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sessionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sessionDistance"
        app:layout_constraintStart_toEndOf="@+id/sessionDate"
        app:layout_constraintTop_toBottomOf="@+id/sessionMap" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sessionDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/exportButton"
        app:layout_constraintStart_toEndOf="@+id/sessionTime"
        app:layout_constraintTop_toBottomOf="@+id/sessionMap" />

    <ImageButton
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_blue_50"
        android:contentDescription="@string/cloud_with_up_arrow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toEndOf="@+id/sessionDistance"
        app:layout_constraintTop_toBottomOf="@+id/sessionMap"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/errorColor"
        android:contentDescription="@string/trash_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/exportButton"
        app:layout_constraintTop_toBottomOf="@+id/sessionMap"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>